# OpenAGI

./: .copilot-instructions.md  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  USER_TESTING.md  USER_TESTING_SUMMARY.md  VISION.md  config.py  config.yaml  constitutional_protection.py  core.py  defense_intelligence.py  demo.py  docker-compose.yml  education.py  examples.py  government.py  health_upgrade.py  install.sh  main.py  openagi.py  openagi_config.yaml  os_module.py  pyproject.toml  quick_demo.py  requirements-dev.txt  requirements.txt  setup.py  setup_user_testing.sh  start.sh  task_manager.py  test_core.py  test_openagi.py  test_system.py  verify_openagi.py  (+1 more)
.github/: copilot-instructions.md
.github/workflows/: release.yml
backups/: backup_index.json
configs/: default.yaml
docs/: testing-guidelines.md
examples/: README.md  advanced_usage.py  basic_usage.py  demo.py  multi_agent.py  plugin_development.py  text_generation.py
openagi/: __init__.py  cli.py  config.py  core.py  core_directives.py  monitoring.py  recovery.py  self_healing.py
openagi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openagi/agent/: __init__.py  engine.py  llm_powered_task_planner.py  memory.py  task_planner.py
openagi/agents/: __init__.py  base.py  manager.py
openagi/api/: __init__.py  client.py  server.py
openagi/cli/: __init__.py  __main__.py
openagi/config/: __init__.py  manager.py  settings.py
openagi/core/: __init__.py  agent.py  config.py  engine.py  feature.py  logger.py  platform.py  registry.py  sample_features.py
openagi/database/: __init__.py  manager.py
openagi/debugging/: __init__.py  advanced.py  engine.py
openagi/examples/: __init__.py  basic_usage.py
openagi/features/: __init__.py  audio_processing.py  computer_vision.py  extended_features.py  machine_learning.py  nlp.py
openagi/helios/: __init__.py  client.py  server.py
openagi/helios/web/: index.html  main.js  style.css
openagi/learning/: neural_network.py  self_learning.py
openagi/models/: __init__.py  loader.py  registry.py
openagi/monitoring/: __init__.py  metrics.py  system.py
openagi/plugins/: manager.py
openagi/security/: __init__.py  auth.py
openagi/storage/: manager.py
openagi/testing/: __init__.py  framework.py
openagi/tools/: __init__.py  audio_generation.py  base.py  code_execution.py  file_system.py  web_search.py
openagi/utils/: __init__.py  config.py  exceptions.py  logging.py
openagi/voice/: __init__.py  stt.py  tts.py  voice_interface.py
tests/: README.md  __init__.py  test_basic.py  test_config.py  test_core.py  test_debugging.py  test_openagi.py  test_platform.py
tests/integration/: test_platform.py
tests/unit/: test_core.py  test_nlp.py
tools/: beta_tester_manager.py  recruitment_automation.py  templates.md
wiki/: API-Reference.md  Examples.md  FAQ.md  Feature-Categories.md  Getting-Started.md  Home.md  Installation.md  Quick-Start-Tutorial.md  README.md  Troubleshooting.md  User-Guide.md
