[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagi"
version = "1.0.0"
description = "Comprehensive OpenAGI Platform with 30M+ Self-Healing AI Features"
authors = [{name = "VIIICORP", email = "contact@viiicorp.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncio",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "psutil>=5.8.0",
    "pathlib",
    "dataclasses;python_version<'3.7'",
]

[project.optional-dependencies]
ai = [
    "numpy>=1.21.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
    "scikit-learn>=1.1.0",
]
web = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]
gpu = [
    "GPUtil>=1.4.0",
]
full = [
    "openagi[ai,web,gpu]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "coverage>=6.0.0",
]

[project.scripts]
openagi = "openagi.cli:main"

[project.urls]
Homepage = "https://github.com/VIIICORP/OpenAGI"
Documentation = "https://docs.openagi.org"
Repository = "https://github.com/VIIICORP/OpenAGI"
"Bug Tracker" = "https://github.com/VIIICORP/OpenAGI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openagi*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"