[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openagi"
version = "1.0.1"
authors = [
    {name = "VIIICORP", email = "contact@viiicorp.com"},
]
description = "Comprehensive OpenAGI platform with 14,000+ AI features"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "artificial-intelligence", "machine-learning", "nlp", "computer-vision", "agi"]
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",
    "torch>=1.11.0",
    "transformers>=4.15.0",
    "opencv-python>=4.5.0",
    "pillow>=8.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "requests>=2.26.0",
    "flask>=2.0.0",
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "tqdm>=4.62.0",
    "joblib>=1.1.0",
    "nltk>=3.6.0",
    "spacy>=3.4.0",
    "librosa>=0.9.0",
    "soundfile>=0.10.0",
    "beautifulsoup4>=4.10.0",
    "selenium>=4.0.0",
    "plotly>=5.0.0",
    "streamlit>=1.10.0",
    "gradio>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
gpu = [
    "tensorflow-gpu>=2.8.0",
    "torch[cuda]>=1.11.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/VIIICORP/OpenAGI"
Documentation = "https://docs.openagi.org"
Repository = "https://github.com/VIIICORP/OpenAGI"
Issues = "https://github.com/VIIICORP/OpenAGI/issues"
Changelog = "https://github.com/VIIICORP/OpenAGI/blob/main/CHANGELOG.md"

[project.scripts]
openagi = "openagi.cli:main"

[tool.setuptools]
packages = ["openagi", "openagi.core", "openagi.utils"]

[tool.setuptools.package-data]
openagi = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "openagi/tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
]